# AmimeWatch

./: .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE  README.md
src/: config.rs  lib.rs  main.rs  utils.rs
src/database/: database.sql  mod.rs
src/database/tables/: group.rs  mod.rs  user.rs
src/locales/: language.rs  locale.rs  mod.rs
src/locales/files/: en.yml  pt.yml
src/plugins/: data.rs  handler.rs  manager.rs  mod.rs  plugin.rs
src/plugins/modules/: about.rs  language.rs  mod.rs  start.rs
